--- a/index.html
+++ b/index.html
@@ -14,19 +14,21 @@
         <div class="row">
           <div class="col-xl-4 col-lg-6 col-md-12">
             <article class="content">
-              <img src="./assets/icons/deer.jpg" alt="deer" />
+              <img class="icon" src="./assets/icons/deer.jpg" alt="deer" />
               <h1 class="heading">EASILY CUSTOMISED</h1>
+              <div class="class">
               <p class="sub_content">
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                 Veritatis magnam error possimus ducimus similique molestiae
                 nihil, praesentium eveniet, reiciendis ipsum et quae non quasi
                 explicabo culpa odit voluptate voluptates velit.
               </p>
+              </div>
             </article>
           </div>
           <div class="col-xl-4 col-lg-6 col-md-12">
             <article class="content">
-              <img src="./assets/icons/cap.jpg" alt="cap" />
+              <img class="icon" src="./assets/icons/cap.jpg" alt="cap" />
               <h1 class="heading">RESPONSIVE READY</h1>
               <p class="sub_content">
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit.
@@ -38,7 +40,11 @@
           </div>
           <div class="col-xl-4 col-lg-6 col-md-12">
             <article class="content">
-              <img src="./assets/icons/snowman.jpg" alt="snowman" />
+              <img
+                class="icon"
+                src="./assets/icons/snowman.jpg"
+                alt="snowman"
+              />
               <h1 class="heading">MODERN DESIGN</h1>
               <p class="sub_content">
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit.
@@ -48,11 +54,9 @@
               </p>
             </article>
           </div>
-        </div>
-        <div class="row">
           <div class="col-xl-4 col-lg-6 col-md-12">
             <article class="content">
-              <img src="./assets/icons/cookie.jpg" alt="cookie" />
+              <img class="icon" src="./assets/icons/cookie.jpg" alt="cookie" />
               <h1 class="heading">CLEAN CODE</h1>
               <p class="sub_content">
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit.
@@ -64,7 +68,7 @@
           </div>
           <div class="col-xl-4 col-lg-6 col-md-12">
             <article class="content">
-              <img src="./assets/icons/tree.jpg" alt="tree" />
+              <img class="icon" src="./assets/icons/tree.jpg" alt="tree" />
               <h1 class="heading">READY TO SHIP</h1>
               <p class="sub_content">
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit.
@@ -76,7 +80,11 @@
           </div>
           <div class="col-xl-4 col-lg-6 col-md-12">
             <article class="content">
-              <img src="./assets/icons/present.jpg" alt="present" />
+              <img
+                class="icon"
+                src="./assets/icons/present.jpg"
+                alt="present"
+              />
               <h1 class="heading">DOWNLOAD FOR FREE</h1>
               <p class="sub_content">
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit.
