--- a/index.html
+++ b/index.html
@@ -3,94 +3,107 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FeatureSection</title>
+    <title>Features section</title>
     <link rel="stylesheet" href="./assets/css/reset.css" />
     <link rel="stylesheet" href="./assets/css/bootstrap-grid.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
-    <section>
+    <section class="wrapper">
       <div class="container">
         <div class="row">
-          <div class="col-xl-4 col-lg-6 col-md-12">
-            <article class="content">
-              <img class="icon" src="./assets/icons/deer.jpg" alt="deer" />
-              <h1 class="heading">EASILY CUSTOMISED</h1>
-              <div class="class">
-                <p class="sub_content">
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Veritatis magnam error possimus ducimus similique molestiae
-                  nihil, praesentium eveniet, reiciendis ipsum et quae non quasi
-                  explicabo culpa odit voluptate voluptates velit.
-                </p>
-              </div>
-            </article>
-          </div>
-          <div class="col-xl-4 col-lg-6 col-md-12">
-            <article class="content">
-              <img class="icon" src="./assets/icons/cap.jpg" alt="cap" />
-              <h1 class="heading">RESPONSIVE READY</h1>
-              <p class="sub_content">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Veritatis magnam error possimus ducimus similique molestiae
-                nihil, praesentium eveniet, reiciendis ipsum et quae non quasi
-                explicabo culpa odit voluptate voluptates velit.
-              </p>
-            </article>
-          </div>
-          <div class="col-xl-4 col-lg-6 col-md-12">
-            <article class="content">
+          <div class="col-xl-4 col-md-6 col-sm-12">
+            <article class="card">
               <img
                 class="icon"
-                src="./assets/icons/snowman.jpg"
-                alt="snowman"
+                src="./assets/icons/easily-customised.png"
+                alt="Easily customised"
               />
-              <h1 class="heading">MODERN DESIGN</h1>
-              <p class="sub_content">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Veritatis magnam error possimus ducimus similique molestiae
-                nihil, praesentium eveniet, reiciendis ipsum et quae non quasi
-                explicabo culpa odit voluptate voluptates velit.
+              <h1 class="title">Easily customised</h1>
+              <p class="content">
+                Cras justo odio, dapibus ac facilisis in, egestas eget quam.
+                Nullam quis risus eget urna mollis ornare vel eu leo. Donec
+                ullamcorper nulla
               </p>
             </article>
           </div>
-          <div class="col-xl-4 col-lg-6 col-md-12">
-            <article class="content">
-              <img class="icon" src="./assets/icons/cookie.jpg" alt="cookie" />
-              <h1 class="heading">CLEAN CODE</h1>
-              <p class="sub_content">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Veritatis magnam error possimus ducimus similique molestiae
-                nihil, praesentium eveniet, reiciendis ipsum et quae non quasi
-                explicabo culpa odit voluptate voluptates velit.
-              </p>
-            </article>
-          </div>
-          <div class="col-xl-4 col-lg-6 col-md-12">
-            <article class="content">
-              <img class="icon" src="./assets/icons/tree.jpg" alt="tree" />
-              <h1 class="heading">READY TO SHIP</h1>
-              <p class="sub_content">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Veritatis magnam error possimus ducimus similique molestiae
-                nihil, praesentium eveniet, reiciendis ipsum et quae non quasi
-                explicabo culpa odit voluptate voluptates velit.
-              </p>
-            </article>
-          </div>
-          <div class="col-xl-4 col-lg-6 col-md-12">
-            <article class="content">
+
+          <div class="col-xl-4 col-md-6 col-sm-12">
+            <article class="card">
               <img
                 class="icon"
-                src="./assets/icons/present.jpg"
-                alt="present"
+                src="./assets/icons/responsive-ready.png"
+                alt="Responsive ready"
               />
-              <h1 class="heading">DOWNLOAD FOR FREE</h1>
-              <p class="sub_content">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Veritatis magnam error possimus ducimus similique molestiae
-                nihil, praesentium eveniet, reiciendis ipsum et quae non quasi
-                explicabo culpa odit voluptate voluptates velit.
+              <h2 class="title">Responsive ready</h2>
+              <p class="content">
+                Cras justo odio, dapibus ac facilisis in, egestas eget quam.
+                Nullam quis risus eget urna mollis ornare vel eu leo. Donec
+                ullamcorper nulla
+              </p>
+            </article>
+          </div>
+
+          <div class="col-xl-4 col-md-6 col-sm-12">
+            <article class="card">
+              <img
+                class="icon"
+                src="./assets/icons/modern-design.png"
+                alt="Modern design"
+              />
+              <h3 class="title">Modern design</h3>
+              <p class="content">
+                Cras justo odio, dapibus ac facilisis in, egestas eget quam.
+                Nullam quis risus eget urna mollis ornare vel eu leo. Donec
+                ullamcorper nulla
+              </p>
+            </article>
+          </div>
+
+          <div class="col-xl-4 col-md-6 col-sm-12">
+            <article class="card">
+              <img
+                class="icon"
+                src="./assets/icons/clean-code.png"
+                alt="Clean code"
+              />
+              <h4 class="title">Clean code</h4>
+              <p class="content">
+                Cras justo odio, dapibus ac facilisis in, egestas eget quam.
+                Nullam quis risus eget urna mollis ornare vel eu leo. Donec
+                ullamcorper nulla
+              </p>
+            </article>
+          </div>
+
+          <div class="col-xl-4 col-md-6 col-sm-12">
+            <article class="card">
+              <img
+                class="icon"
+                src="./assets/icons/ready-to-ship.png"
+                alt="Ready to ship"
+              />
+              <h5 class="title">Ready to ship</h5>
+              <p class="content">
+                Cras justo odio, dapibus ac facilisis in, egestas eget quam.
+                Nullam quis risus eget urna mollis ornare vel eu leo. Donec
+                ullamcorper nulla
+              </p>
+            </article>
+          </div>
+
+          <div class="col-xl-4 col-md-6 col-sm-12">
+            <article class="card">
+              <img
+                class="icon"
+                src="./assets/icons/download-for-free.png"
+                alt="Download for free"
+              />
+              <h6 class="title">Download for free</h6>
+              <p class="content">
+                Cras justo odio, dapibus ac facilisis in, egestas eget quam.
+                Nullam quis risus eget urna mollis ornare vel eu leo. Donec
+                ullamcorper nulla
               </p>
             </article>
           </div>
